新增 CI 与覆盖率门禁，补齐核心单元测试
- 新增 jacoco 覆盖率检查：fluxcache-core 行/分支覆盖率 ≥80% 且构建失败
- 新增 GitHub Actions CI（JDK 11/17 矩阵 + Codecov 上报）
- 升级 integration-test.yml 中 checkout/setup-java/cache 至 v4
- 新增分支测试：Optional 返回值、SpEL 失败回退、null key、safeGet 异常降级
- 补充 benchmark 模块与 docs/benchmark 报告
- 修复 AopUtils.getTargetClass 入参，忽略深层 target 目录